--- a/custom-items.html
+++ b/custom-items.html
@@ -44,7 +44,11 @@
                 </div>
             </div>
             <p class ="page-desc"><i>« A personal library of fictional homebrew books written for roleplay. All entries are original, but grounded in Warcraft’s existing magical and cultural frameworks. Where the official canon leaves gaps, imagination takes careful steps—not leaps. »</i></p>
-
+            <div class="fancy-divider">
+                <span class="line left"></span>
+                <span class="diamond"></span>
+                <span class="line right"></span>
+            </div>
             <!-- Buttons for filtering -->
             <div class="filter-buttons">
                 <button class="filter-btn" data-category="all">ALL</button>
@@ -64,8 +68,13 @@
                 <button class="filter-btn" data-category="titan">TITANIC</button>
                 <!-- Add more buttons for other categories as needed -->
             </div>
+            <div class="fancy-divider">
+                <span class="line left"></span>
+                <span class="diamond"></span>
+                <span class="line right"></span>
+            </div>
             <div class="note">
-            <p>⚠️ I am still writing the books so most of these only contain the item description at the moment.</p>
+            <p>⚠️ Most entries currently include only the book's description. Full texts are being written and will be added gradually.</p>
             </div>
             <!-- <div class="divider">
                 <span class="diamond"></span>
@@ -76,7 +85,12 @@
                 <div class="item-card" data-category="arcane">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/elven_book_01.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/elven_book_01.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">WARDS AND WEAVES: A PRACTICAL GUIDE ON ARCANE ENCHANTING</span>
                                 <span class="item-subname">ENCHANTING - ARYSSA BEL'ATHIL</span>
@@ -138,10 +152,16 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="item-card" data-category="demonic">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/demon_book_03.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/demon_book_03.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">THE BINDING LEDGER</span>
                                 <span class="item-subname">DEMONOLOGY - ARYSSA BEL'ATHIL</span>
@@ -153,10 +173,16 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="item-card" data-category="demonic">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/demon_book_01.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/demon_book_01.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">THE CODEX OF SEVERANCE</span>
                                 <span class="item-subname">BINDING RITUALS - MULTIPLE AUTHORS</span>
@@ -172,7 +198,12 @@
                 <div class="item-card" data-category="nerubian">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/nerubian_book_01.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/nerubian_book_01.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">SILK OF THE DEEP WARRENS</span>
                                 <span class="item-subname">ANCIENT KNOWLEDGE - UNKNOWN</span>
@@ -190,7 +221,12 @@
                 <div class="item-card" data-category="zandali">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/zandali_tablet.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/zandali_tablet.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">THE TABLET OF D'ZUN'KA</span>
                                 <span class="item-subname">ANCIENT KNOWLEDGE - UNKNOWN</span>
@@ -206,7 +242,12 @@
                 <div class="item-card" data-category="necromancy">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/necro_book_01.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/necro_book_01.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">THE EBON LOOM</span>
                                 <span class="item-subname">ENCHANTING & TAILORING - UNKNOWN</span>
@@ -222,7 +263,12 @@
                 <div class="item-card" data-category="shadow">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/shadow_book_01.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/shadow_book_01.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">THE UMBRAL LEXICON</span>
                                 <span class="item-subname">VOID-INFUSED SPELLCRAFT - UNKNOWN</span>
@@ -238,7 +284,12 @@
                 <div class="item-card" data-category="demonic">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/demon_book_02.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/demon_book_02.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">THE GRIMOIRE OF SILENT TONGUES</span>
                                 <span class="item-subname">DEMONOLOGY & INFERNAL CONTRACTS - UNKNOWN</span>
@@ -254,7 +305,12 @@
                 <div class="item-card" data-category="mogu">
                     <div class="item-info">
                         <button class="item-toggle">
-                            <img src="images/mogu_book_01.png" alt="icon" class="item-icon">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/mogu_book_01.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
                             <span class="item-text">
                                 <span class="item-name">THE TOME OF OBSIDIAN LORDS</span>
                                 <span class="item-subname">ARCANE METALLURGY - UNKNOWN</span>
