--- a/custom-items.html
+++ b/custom-items.html
@@ -17,7 +17,7 @@
                 <li>
                     <a href="#">WORLD OF WARCRAFT RP</a>
                     <ul class="dropdown">
-                        <li><a href="characters.html">MY CHARACTERS</a></li>
+                        <li><a href="characters.html">CHARACTERS</a></li>
                         <li><a href="custom-items.html">CUSTOM BOOKS</a></li>
                         <li><a href="guides.html">GUIDES</a></li>
                     </ul>
@@ -88,7 +88,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/elven_book_01.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -159,7 +159,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/demon_book_03.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -180,7 +180,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/demon_book_01.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -201,7 +201,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/nerubian_book_01.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -224,7 +224,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/zandali_tablet.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -245,7 +245,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/necro_book_01.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -266,7 +266,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/shadow_book_01.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -287,7 +287,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/demon_book_02.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -308,7 +308,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/mogu_book_01.png" class="item-icon" alt="icon">
+                                    <img src="images/book.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -369,6 +369,6 @@
                 });
             });
         });
-        </script>
+    </script>
 </body>
 </html>
