--- a/characters.html
+++ b/characters.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault of Enduriel</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
 
@@ -49,7 +50,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/character.png" class="item-icon" alt="icon">
+                                    <img src="images/aryssa.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -69,7 +70,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/character.png" class="item-icon" alt="icon">
+                                    <img src="images/maloren.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -89,7 +90,7 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/character.png" class="item-icon" alt="icon">
+                                    <img src="images/thermara.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
@@ -109,12 +110,112 @@
                             <div class="icon-wrapper">
                                 <img src="images/circle.svg" alt="" class="circle-border">
                                 <div class="item-icon-wrapper">
-                                    <img src="images/character.png" class="item-icon" alt="icon">
+                                    <img src="images/arval.png" class="item-icon" alt="icon">
                                 </div>
                             </div>
                             <span class="item-text">
                                 <span class="item-name">ANDRIJA 'ARVAL' BARTOSH</span>
                                 <span class="item-subname">THE UNDYING BLADE</span>
+                            </span>
+                        </button>
+                        <div class="item-details">
+                            <p class="item-description">...</p>
+                            <p class="item-obtained-from"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-card" data-category="demonic">
+                    <div class="item-info">
+                        <button class="item-toggle">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/zyrena.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
+                            <span class="item-text">
+                                <span class="item-name">ZYRENA</span>
+                                <span class="item-subname">THE ASHEN STRATEGIST</span>
+                            </span>
+                        </button>
+                        <div class="item-details">
+                            <p class="item-description">...</p>
+                            <p class="item-obtained-from"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-card" data-category="demonic">
+                    <div class="item-info">
+                        <button class="item-toggle">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/zarakthar.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
+                            <span class="item-text">
+                                <span class="item-name">ZARAKTHAR</span>
+                                <span class="item-subname">SCION OF STONE & FLAME</span>
+                            </span>
+                        </button>
+                        <div class="item-details">
+                            <p class="item-description">...</p>
+                            <p class="item-obtained-from"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-card" data-category="demonic">
+                    <div class="item-info">
+                        <button class="item-toggle">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/marek.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
+                            <span class="item-text">
+                                <span class="item-name">MAREK THORNE</span>
+                                <span class="item-subname">FORMER BARADIN WARDEN</span>
+                            </span>
+                        </button>
+                        <div class="item-details">
+                            <p class="item-description">...</p>
+                            <p class="item-obtained-from"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-card" data-category="demonic">
+                    <div class="item-info">
+                        <button class="item-toggle">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/caeryn.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
+                            <span class="item-text">
+                                <span class="item-name">"LADY" CAERYN VILEVINE</span>
+                                <span class="item-subname">THE BONE WHISPERER</span>
+                            </span>
+                        </button>
+                        <div class="item-details">
+                            <p class="item-description">...</p>
+                            <p class="item-obtained-from"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-card" data-category="demonic">
+                    <div class="item-info">
+                        <button class="item-toggle">
+                            <div class="icon-wrapper">
+                                <img src="images/circle.svg" alt="" class="circle-border">
+                                <div class="item-icon-wrapper">
+                                    <img src="images/mirvella.png" class="item-icon" alt="icon">
+                                </div>
+                            </div>
+                            <span class="item-text">
+                                <span class="item-name">MIRVELLA THE BROKEN</span>
+                                <span class="item-subname">THE MOURNING DOLL</span>
                             </span>
                         </button>
                         <div class="item-details">
