--- a/characters.html
+++ b/characters.html
@@ -44,6 +44,7 @@
                     <span class="flourish-line-right"></span>
                 </div>
             </div>
+            <p class="page-desc">work in progress</p>
                 <div class="item-card" data-category="demonic">
                     <div class="item-info">
                         <button class="item-toggle">
