--- a/economy.html
+++ b/economy.html
@@ -114,6 +114,37 @@
                 <span class="diamond"></span>
                 <span class="line right"></span>
             </div>
+            <br>
+            <h2>PROFESSION BASED TABLES</h2>
+            <br>
+            <h3>Blacksmith Services & Pricing</h3>
+            <table>
+                <tr><th>Service</th><th>Price</th><th>Details</th></tr>
+                <tr><td>Sharpen a dagger/small blade</td><td>10–20 copper</td><td>Condition-based; higher for damage</td></tr>
+                <tr><td>Sharpen a sword or axe</td><td>20–40 copper</td><td>Two-handers priced higher</td></tr>
+                <tr><td>Clean and oil weapon</td><td>10–15 copper</td><td>Rust, grime, and preservation</td></tr>
+                <tr><td>Repair a blade (minor chip)</td><td>30–60 copper</td><td>Edge work and reshaping</td></tr>
+                <tr><td>Rehaft an axe / replace hilt</td><td>1–2 silver</td><td>New handle and fittings</td></tr>
+                <tr><td>Reforge a cracked weapon</td><td>3–5 silver</td><td>Heavy labor and heating</td></tr>
+                <tr><td>Forge iron nails (10 nails)</td><td>10–15 copper</td><td>Basic construction staples</td></tr>
+                <tr><td>Forge horseshoes (set of 4)</td><td>50–70 copper</td><td>Includes iron and fitting</td></tr>
+                <tr><td>Repair light armor (leather/chain)</td><td>1–2 silver</td><td>Linkwork, patches, and riveting</td></tr>
+                <tr><td>Repair plate armor (single plate)</td><td>2–4 silver</td><td>Straps, dents, and reforging</td></tr>
+                <tr><td>Full blade forging (standard)</td><td>5–10 silver</td><td>No enchantments; steel blade</td></tr>
+                <tr><td>Custom forge work (commission)</td><td>1–3 gold</td><td>Named or ornamental weapon</td></tr>
+            </table>
+
+            <p><b>Optional Add-ons:</b></p>
+                <ul>
+                    <li><b>Rush Order Fee:</b> +50%</li>
+                    <li><b>Bring your own materials:</b> -25%</li>
+                    <li><b>Military discount:</b> -10% (veterans/guard)</li>
+                </ul>
+            <div class="fancy-divider">
+                <span class="line left"></span>
+                <span class="diamond"></span>
+                <span class="line right"></span>
+            </div>
         </section>
     </main>
 
