--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
                     <a href="#">WORLD OF WARCRAFT RP</a>
                     <ul class="dropdown">
                         <li><a href="custom-items.html">CUSTOM BOOKS</a></li>
-                        <li><a href="economy.html">ECONOMY SHEET</a></li>
+                        <li><a href="economy.html">ECONOMY GUIDE</a></li>
                         <li><a href="guides.html">TRP 3 GUIDES</a></li>
                     </ul>
                 </li>
                 <li><a href="#">FANTASY PROJECTS</a></li>
                 <li><a href="#">MUSIC</a></li>
-                <li><a href="#">RESOURCES</a></li>
             </ul>
         </nav>
     </header>
