--- a/economy.html
+++ b/economy.html
@@ -139,6 +139,27 @@
                     <li><b>Bring your own materials:</b> -25%</li>
                     <li><b>Military discount:</b> -10% (veterans/guard)</li>
                 </ul>
+            <h3>Tavern Pricing & Services</h3>
+            <table>
+                <tr><th>Item/Service</th><th>Price</th><th>Notes</th></tr>
+                <tr><td>Common meal (stew, bread)</td><td>3–5 copper</td><td>Filling but simple fare</td></tr>
+                <tr><td>Mug of ale or cider</td><td>2–4 copper</td><td>Local brew, modest strength</td></tr>
+                <tr><td>Imported wine or fine spirits</td><td>10–20 copper</td><td>Higher-end stock</td></tr>
+                <tr><td>Room for the night (common)</td><td>10–15 copper</td><td>Shared space or bunk</td></tr>
+                <tr><td>Private room (basic inn)</td><td>20–40 copper</td><td>Basic privacy and bedding</td></tr>
+                <tr><td>Hot bath (if available)</td><td>5–10 copper</td><td>Includes towel and soap</td></tr>
+                <tr><td>Stable a horse overnight</td><td>10 copper</td><td>Includes feed and water</td></tr>
+                <tr><td>Meal for two (full course)</td><td>10–15 copper</td><td>Starter, main, drink</td></tr>
+                <tr><td>Tips for serving staff</td><td>1–3 copper</td><td>Optional but respectful</td></tr>
+            </table>
+
+            <p><b>Tavern Etiquette Tips:</b></p>
+            <ul>
+                <li>Overpaying for basic meals or drinks often signals wealth, naivety, or intent to impress.</li>
+                <li>Guards and adventurers may receive modest discounts for regular patronage or defense.</li>
+                <li>Gold should almost never change hands in a tavern unless it's bribery or heavy buying.</li>
+                <li>Staff often notice who tips—and who doesn't.</li>
+            </ul>
             <div class="fancy-divider">
                 <span class="line left"></span>
                 <span class="diamond"></span>
