--- a/economy.html
+++ b/economy.html
@@ -140,7 +140,7 @@
                     <li><b>Military discount:</b> -10% (veterans/guard)</li>
                 </ul>
             <br>
-            <h3>Tavern Pricing & Services</h3>
+            <h3>Tavern Services & Pricing</h3>
             <table>
                 <tr><th>Item/Service</th><th>Price</th><th>Notes</th></tr>
                 <tr><td>Common meal (stew, bread)</td><td>3–5 copper</td><td>Filling but simple fare</td></tr>
