--- a/economy.html
+++ b/economy.html
@@ -62,35 +62,6 @@
                 <b>Gold:</b> Serious wealth, land, bribes, powerful magic or weapons
             </p>
             <br>
-            <h3>Daily Living Costs (Common Folk)</h3>
-            <table>
-                <tr><th>Item/Service</th><th>Price</th><th>Notes</th></tr>
-                <tr><td>Loaf of bread / bowl of stew</td><td>2–5 copper</td><td>Basic tavern fare</td></tr>
-                <tr><td>Mug of ale or water</td><td>1–3 copper</td><td>Varies by quality</td></tr>
-                <tr><td>Bed in a common inn</td><td>8–15 copper</td><td>Shared room: cheaper</td></tr>
-                <tr><td>Simple clothing</td><td>15–30 copper</td><td>Linen, tunic, travel wear</td></tr>
-                <tr><td>Basic tools</td><td>50–80 copper</td><td>Hammer, rope, etc.</td></tr>
-            </table>
-            <br>
-            <h3>Adventurer Equipment</h3>
-            <table>
-                <tr><th>Item</th><th>Price</th><th>Notes</th></tr>
-                <tr><td>Simple dagger</td><td>1–2 silver</td><td>Iron or steel</td></tr>
-                <tr><td>Sword, axe, bow</td><td>5–15 silver</td><td>Quality affects cost</td></tr>
-                <tr><td>Armor (leather/chain)</td><td>10–30 silver</td><td>Plate is much higher</td></tr>
-                <tr><td>Custom weapon / smithing</td><td>1–3 gold</td><td>Artisan work</td></tr>
-                <tr><td>Enchanted item (minor)</td><td>5–15 gold</td><td>Scales with power</td></tr>
-            </table>
-
-            <h3>Services & Wages</h3>
-            <table>
-                <tr><th>Service</th><th>Price</th><th>Notes</th></tr>
-                <tr><td>Hire a mercenary (day)</td><td>5–10 silver</td><td>Veterans charge more</td></tr>
-                <tr><td>Message delivery</td><td>2–5 silver</td><td>In-town cheaper</td></tr>
-                <tr><td>Magic healing (minor)</td><td>10–20 silver</td><td>Priest/Light services</td></tr>
-                <tr><td>Custom tailoring / rune work</td><td>1–3 gold</td><td>Skilled craftsmanship</td></tr>
-            </table>
-
             <h3>Economic Classes (RP Guidelines)</h3>
             <table>
                 <tr><th>Class</th><th>Wealth on Person</th><th>Monthly Wages</th></tr>
@@ -114,7 +85,7 @@
                 <span class="line right"></span>
             </div>
             <br>
-            <h2>PROFESSION BASED TABLES</h2>
+            <h2>PRICING TABLES</h2>
             <br>
             <h3>Blacksmith Services & Pricing</h3>
             <table>
@@ -139,7 +110,6 @@
                     <li><b>Bring your own materials:</b> -25%</li>
                     <li><b>Military discount:</b> -10% (veterans/guard)</li>
                 </ul>
-            <br>
             <h3>Tavern Services & Pricing</h3>
             <table>
                 <tr><th>Item/Service</th><th>Price</th><th>Notes</th></tr>
@@ -161,6 +131,64 @@
                 <li>Gold should almost never change hands in a tavern unless it's bribery or heavy buying.</li>
                 <li>Staff often notice who tips—and who doesn't.</li>
             </ul>
+            <br>
+            <h3>Market Goods & Common Items</h3>
+            <table>
+                <tr><th>Item</th><th>Price</th><th>Notes</th></tr>
+                <tr><td>Loaf of bread</td><td>2–4 copper</td><td>Fresh, standard fare</td></tr>
+                <tr><td>Cheese wedge</td><td>3–6 copper</td><td>Common variety</td></tr>
+                <tr><td>Basic herbs or spices (bundle)</td><td>5–10 copper</td><td>For cooking or minor alchemy</td></tr>
+                <tr><td>Set of traveler’s clothes</td><td>20–40 copper</td><td>Linen or wool, no armor</td></tr>
+                <tr><td>Soap, candle, or thread (each)</td><td>2–5 copper</td><td>Everyday supplies</td></tr>
+                <tr><td>Sack of potatoes, apples, etc.</td><td>10–15 copper</td><td>Enough for several meals</td></tr>
+                <tr><td>Wineskin or waterskin (empty)</td><td>8–12 copper</td><td>Reusable container</td></tr>
+            </table>
+
+            <h3>Wages & Common Jobs</h3>
+            <table>
+                <tr><th>Profession</th><th>Typical Wage</th><th>Details</th></tr>
+                <tr><td>Dockhand / Laborer</td><td>3–5 silver per week</td><td>Physical labor, unloading, hauling</td></tr>
+                <tr><td>Farmhand</td><td>2–4 silver per week</td><td>Seasonal variation</td></tr>
+                <tr><td>Stableboy / Inn servant</td><td>2–3 silver per week</td><td>Includes meals and bed</td></tr>
+                <tr><td>Hunter / Trapper</td><td>5–8 silver per week</td><td>Or per pelt/bundle of meat</td></tr>
+                <tr><td>Scribe / Clerk</td><td>6–10 silver per week</td><td>Literacy-based trade</td></tr>
+                <tr><td>Mercenary (base rate)</td><td>1–2 silver per day</td><td>Scales with risk and experience</td></tr>
+            </table>
+
+            <h3>Healing & Magical Services</h3>
+            <table>
+                <tr><th>Service</th><th>Price</th><th>Notes</th></tr>
+                <tr><td>Minor herbal treatment</td><td>5–10 copper</td><td>Wounds, headaches, fatigue</td></tr>
+                <tr><td>Light-infused bandaging</td><td>20–30 copper</td><td>Clean and spiritually laced</td></tr>
+                <tr><td>Priest healing (minor)</td><td>10–20 silver</td><td>Cuts, bruises, infection</td></tr>
+                <tr><td>Priest healing (serious)</td><td>1–2 gold</td><td>Broken bones, disease</td></tr>
+                <tr><td>Blessing on weapon/item</td><td>50 silver – 1 gold</td><td>Short-term divine enchantment</td></tr>
+            </table>
+
+            <h3>Games, Gambling & Entertainment</h3>
+            <table>
+                <tr><th>Activity</th><th>Common Stakes</th><th>Notes</th></tr>
+                <tr><td>Dice or card games</td><td>1–5 copper</td><td>Casual stakes at taverns</td></tr>
+                <tr><td>Drinking contest</td><td>5–10 copper</td><td>Winner takes all (or buys next round)</td></tr>
+                <tr><td>Wagers / bar bets</td><td>Varies</td><td>Usually 1–10 copper unless serious</td></tr>
+                <tr><td>Bard performance</td><td>5–20 copper (tip)</td><td>Generosity varies by audience</td></tr>
+                <tr><td>Hiring a bard/dancer</td><td>20–50 copper</td><td>Per evening or event</td></tr>
+            </table>
+
+            <h3>Housing & Property</h3>
+            <table>
+                <tr><th>Type</th><th>Cost (per month)</th><th>Notes</th></tr>
+                <tr><td>Shared room at inn</td><td>40–60 copper</td><td>Cheap, noisy, includes food</td></tr>
+                <tr><td>Private room at inn</td><td>1–2 silver</td><td>Basic privacy and warmth</td></tr>
+                <tr><td>Small cottage (rented)</td><td>3–5 silver</td><td>Modest rural home</td></tr>
+                <tr><td>Townhouse (rented)</td><td>8–15 silver</td><td>Comfortable, near amenities</td></tr>
+                <tr><td>Manor estate (noble)</td><td>1–5 gold</td><td>Servants, stables, land</td></tr>
+            </table>
+            <div class="note">
+                <p>
+                    <b>Note:</b> All prices reflect in-character roleplay values, not game mechanics. Adjust as needed for your phase setting.
+                </p>
+            </div>
             <div class="fancy-divider">
                 <span class="line left"></span>
                 <span class="diamond"></span>
